Fix mpeg-1 layer2 parsing typo.

Path was rejecting all valid files and passing on all invalid ones :/

BUG=693962
TEST=new unittest

Review-Url: https://codereview.chromium.org/2705353002
Cr-Commit-Position: refs/heads/master@{#452136}

Former-commit-id: 333c4148fe97a5a5e9964b0e390edf2a3fb36cf7